2007-05-15  Brian Matherly  <brian@gramps-project.org>
    * src/plugins/NarrativeWeb.py: Sort strings, not lists.

2007-05-15  Brian Matherly  <brian@gramps-project.org>
	* src/DataViews/_PedigreeView.py: catch possible crash

2007-05-14  Brian Matherly  <brian@gramps-project.org>
    * src/plugins/NarrativeWeb.py: 0001044: ReportWeb Site, tab Page Generation
      - items in dropdown list do not sort correctly

2007-05-14  Espen Berg  <espen.berg@ntnu.no>
	* src/DateHandler/_Date_nb.py: 

2007-05-13  Brian Matherly  <brian@gramps-project.org>
    * src/plugins/NarrativeWeb.py: Fix reference paths on Windows.

2007-05-13  Brian Matherly  <brian@gramps-project.org>
	* src/Editors/_EditFamily.py: fix typo.

2007-05-12  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PedigreeView.py: additional error checking
	* src/DataViews/_RelationView.py: check for empty person
	* src/GrampsDb/_ReadGedcom.py: additional error checking
	* src/GrampsDb/_DbUtils.py: additional error checking
	* src/ReportBase/_ReportDialog.py: additional error checking
	* src/Editors/_EditFamily.py: additional error checking
	* src/DisplayTabs/_EmbeddedList.py: additional error checking
	* src/plugins/FindDupes.py: additional error checking
	* src/plugins/Verify.py: additional error checking
	* src/ImgManip.py: additional error checking
	* src/BasicUtils.py: additional error checking

2007-05-11 Benny Malengier <bm@cage.ugent.be>
	* src/GrampsDb/_ReadXML.py: clean meld issues, add privacy read lds_ord even if not set yet

2007-05-10  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: fix privacy settings
	* src/GrampsDb/_WriteXML.py: fix privacy settings
	* src/LdsUtils.py: updated temple codes
	* src/DbLoader.py: try to handle default directory better

2007-05-10 Benny Malengier <bm@cage.ugent.be>
	* src/GrampsDb/_ReadXML.py: partly fix #1053, import privacy of person, family,
        media, source, place and repo correct. Still to do: sourceref and lds_ordinance